[package]
name = "bottlers"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Rust implementation of the Bottle secure-container protocol, built on the purecrypto crate"
repository = "https://github.com/BottleFmt/bottlers"
license = "MIT"
keywords = ["bottle", "crypto", "cbor", "encryption", "signature"]
categories = ["cryptography"]

[dependencies]
purecrypto = { path = "../../purecrypto" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]

[lints.rust]
missing_docs = "warn"
